--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -6,15 +6,15 @@
     background: $primary;
     position: relative;
     overflow: hidden;
+    z-index: -1;
 
     .hero__img {
         position: absolute;
         right: 0;
-        bottom: -60px;
+        bottom: 0;
         max-width: 650px;
         @media (max-width: $breakpoint1200) {
             max-width: 475px;
-            bottom: 0;
         }
         @media (max-width: $breakpoint480) {
             max-width: 250px;
