--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -44,7 +44,8 @@ body {
         background-color: $secondary;
         border-radius: 4px;
         border: 3px solid rgba(44, 130, 253, 0.2);
-        &:hover{
+
+        &:hover {
             background: $secondaryHover;
             transition: .3s ease;
         }
@@ -55,13 +56,26 @@ body {
         border-radius: 4px;
         color: $secondary;
         border: 3px solid transparent;
-        &:hover{
+
+        &:hover {
             background: $secondaryHover;
-            color:#fff;
+            color: #fff;
             transition: .3s ease;
         }
     }
 }
+
+// Section Titles
+.section__title {
+    margin-top: 24px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 110%;
+    letter-spacing: -0.03em;
+    color: $primary;
+}
+
 
 // Animations
 // Fade
