--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -6,7 +6,7 @@
     background: $primary;
     position: relative;
     overflow: hidden;
-    z-index: -1;
+    // z-index: -1;
 
     .hero__img {
         position: absolute;
