--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -11,11 +11,17 @@
             .accordion__item-content {
                 display: block;
             }
-            .trigger__icon{
-                rect{
+
+            .trigger__icon {
+                rect {
                     fill-opacity: 1;
                     transition: .3s ease;
                 }
+            }
+
+            .trigger__text{
+                opacity: 1 !important;
+                transition: .3s ease;
             }
         }
 
@@ -25,6 +31,9 @@
             padding: 24px 28px;
             align-items: center;
             cursor: pointer;
+            @media (max-width: $breakpoint768) {
+                padding: 12px;
+            }
 
             .trigger__icon {}
 
@@ -36,6 +45,14 @@
                 line-height: 140%;
                 letter-spacing: -0.01em;
                 color: $primary;
+                opacity: .75;
+                @media (max-width: $breakpoint768) {
+                    line-height: 110%;
+                    font-size: 18px;
+                }
+                @media (max-width: $breakpoint480) {
+                    font-size: 16px;
+                }
             }
 
             .trigger__img {
@@ -66,6 +83,9 @@
             display: none;
             animation: fade .3s ease;
             padding: 0 28px 36px 28px;
+            @media (max-width: $breakpoint768) {
+                padding: 0 16px 16px 16px;
+            }
 
             .content__text {
                 font-style: normal;
@@ -74,10 +94,11 @@
                 line-height: 190%;
                 letter-spacing: 0.02em;
                 color: rgba(0, 23, 49, 0.55);
+                @media (max-width: $breakpoint768) {
+                    line-height: 130%;
+                }
             }
         }
-
-
     }
 
 }
@@ -95,12 +116,40 @@
     gap: 122px;
     justify-content: space-between;
 
+    @media (max-width: 1300px) {
+        gap: 60px;
+    }
+
+    @media (max-width: $breakpoint1200) {
+        gap: 35px;
+    }
+
+    @media (max-width: $breakpoint992) {
+        flex-wrap: wrap;
+    }
+
     &__item {
         &:first-child {
             flex: 0 1 475px;
+
+            @media (max-width: $breakpoint992) {
+               flex: 0 1 100%;
+            }
         }
 
-        &:last-child {}
+        &:last-child {
+            @media (max-width: 1300px) {
+                img {
+                    max-width: 100%;
+                    width: 100%;
+                    height: auto;
+                }
+            }
+
+            @media (max-width: $breakpoint992) {
+                flex: 0 1 100%;
+            }
+        }
     }
 }
 
@@ -109,11 +158,28 @@
     background: #f7f7f7;
     border-radius: 12px;
     margin-top: 35px;
+    @media (max-width: $breakpoint480) {
+        flex-wrap: wrap;
+    }
 
-    &__item {}
+    &__item {
+        @media (max-width: $breakpoint992) {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        @media (max-width: $breakpoint480) {
+            flex: 0 1 100%;
+            text-align: center;
+        }
+    }
 
     &__item-img {
         padding: 0 15px 15px 15px;
+        @media (max-width: $breakpoint480) {
+            padding: 10px 10px 0 10px;
+            text-align: center;
+        }
     }
 
     &__item-info {
@@ -143,6 +209,18 @@
 .quote__btn {
     margin-top: 35px;
     display: inline-block;
+
+    @media (max-width: $breakpoint992) {
+        display: flex;
+        gap: 5px;
+        margin-top: 25px !important;
+        max-width: fit-content;
+        margin: 0 auto;
+    }
+    @media (max-width: $breakpoint480) {
+        max-width: 100%;
+        justify-content: center;
+    }
 
     span {
         font-weight: 400;
