--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -74,9 +74,24 @@ body {
     line-height: 110%;
     letter-spacing: -0.03em;
     color: $primary;
+
     @media (max-width: $breakpoint768) {
         margin-top: 14px;
         font-size: 36px;
+    }
+}
+
+// Section Text
+.section__text {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.01em;
+    color: rgba(0, 23, 49, 0.55);
+    @media (max-width: $breakpoint768) {
+        font-size: 18px;
+        line-height: 24px;
     }
 }
 
