--- a/src/scss/_pricing.scss
+++ b/src/scss/_pricing.scss
@@ -10,19 +10,18 @@
         flex-wrap: wrap;
         gap: 20px;
     }
-}
 
-.pricing__header-item {
-    &:last-child {
-        flex: 0 0 300px;
+    &-item {
+        &:last-child {
+            flex: 0 0 300px;
 
-        @media (max-width: 600px) {
-            flex: 0 1 100%;
-            justify-content: center;
-            display: flex;
+            @media (max-width: 600px) {
+                flex: 0 1 100%;
+                justify-content: center;
+                display: flex;
+            }
         }
     }
-
 }
 
 .billing {
@@ -78,5 +77,229 @@
         top: 2.3px;
         bottom: 2.3px;
         transition: .3s ease;
+    }
+}
+
+.section{
+    &__pricing{
+        padding-bottom: 108px;
+    }
+}
+
+.price {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 27px;
+    gap: 15px;
+    @media (max-width: $breakpoint1200) {
+        flex-wrap: wrap;
+    }
+    @media (max-width: $breakpoint480) {
+        margin-top: 0;
+    }
+
+    &__item {
+        flex: 0 1 406px;
+        margin-top: 20px;
+        background: #fff;
+        box-shadow: 0px 4px 15px rgba(10, 17, 85, 0.1);
+        border-radius: 12px;
+        padding: 28px 24px;
+        @media (max-width: $breakpoint1200) {
+            flex: 0 1 48%;
+        }
+        @media (max-width: $breakpoint768) {
+            flex: 0 1 100%;
+        }
+        @media (max-width: $breakpoint480) {
+            padding: 20px;
+        }
+
+        //PRO card
+        &.price__item-pro{
+            background: $primary;
+            position: relative;
+
+            .bonus {
+                position: absolute;
+                right: -14px;
+                top: 21px;
+                @media (max-width: $breakpoint480) {
+                    top: -20px;
+                }
+            }
+            .price__item-name{
+               span{
+                    background: transparent;
+                    color: white;
+                    border: 1px solid white;
+               }
+            }
+            .price__item-price{
+                color: white;
+                span{
+                    color: white;
+                }
+            }
+            .price__item-period, .price__item-text, .price__list-item--text{
+                color: white;
+            }
+
+
+        }
+    }
+
+    &__item-name {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 25px;
+        letter-spacing: 0.02em;
+        color: $secondary;
+        display: flex;
+        align-items: center;
+
+        span {
+            font-style: normal;
+            font-weight: 600;
+            font-size: 13px;
+            line-height: 16px;
+            letter-spacing: 0.01em;
+            color: #F04747;
+            border-radius: 4px;
+            padding: 4px 12px;
+            background: rgba(240, 71, 71, 0.1);
+            margin-left: 10px;
+        }
+    }
+
+    &__item-oldprice {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        text-decoration-line: line-through;
+        font-feature-settings: 'tnum' on, 'lnum' on;
+        color: #F04747;
+        margin-top: 17px;
+        @media (max-width: $breakpoint480) {
+            margin-top: 10px;
+            font-size: 18px;
+        }
+    }
+
+    &__item-price {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 24px;
+        font-feature-settings: 'tnum' on, 'lnum' on;
+        margin-top: 10px;
+        display: flex;
+
+        @media (max-width: $breakpoint480) {
+            font-size: 28px;
+        }
+
+        span {
+            font-size: 20px;
+            color: #6A6A6A;
+            margin-top: 4px;
+            margin-left: 2px;
+        }
+
+    }
+
+    &__item-period {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: -0.03em;
+        color: rgba(0, 23, 49, 0.55);
+        margin-top: 8px;
+        @media (max-width: $breakpoint480) {
+            font-size: 18px;
+        }
+    }
+
+    &__item-text {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 0.01em;
+        color: #6A6A6A;
+        margin-top: 8px;
+        @media (max-width: $breakpoint480) {
+            font-size: 16px;
+        }
+    }
+
+    &__item-button {}
+
+    &__btn {
+        margin-top: 27px;
+        display: flex;
+        justify-content: center;
+        @media (max-width: $breakpoint480) {
+            margin-top: 14px;
+        }
+    }
+
+    &__list {
+        margin-top: 8px;
+        @media (max-width: $breakpoint480) {
+            margin-top: 16px;
+        }
+    }
+
+    &__list-item {
+        margin-top: 40px;
+        display: flex;
+        align-items: center;
+        @media (max-width: $breakpoint768) {
+            margin-top: 20px;
+        }
+        @media (max-width: $breakpoint480) {
+            margin-top: 10px;
+        }
+
+        &--img {
+    
+        }
+
+        &--text {
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 25px;
+            font-feature-settings: 'tnum' on, 'lnum' on;
+            color: rgba(0, 23, 49, 0.55);
+            margin-left: 16px;
+            @media (max-width: $breakpoint480) {
+                font-size: 16px;
+                line-height: 100%;
+                margin-left: 8px;
+            }
+        }
+        &--icon{
+            margin-left: auto;
+        }
+    }
+
+    &__item-subname {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 44px;
+        font-feature-settings: 'tnum' on, 'lnum' on;
+        color: #001731;
+        margin-top: 32px;
+        @media (max-width: $breakpoint480) {
+            margin-top: 16px;
+            font-size: 28px;
+            line-height: 100%;
+        }
     }
 }
