--- a/src/scss/_pricing.scss
+++ b/src/scss/_pricing.scss
@@ -93,6 +93,7 @@
     gap: 15px;
     @media (max-width: $breakpoint1200) {
         flex-wrap: wrap;
+        justify-content: center;
     }
     @media (max-width: $breakpoint480) {
         margin-top: 0;
