--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,7 @@
 @import './learn';
 @import './reviews';
 @import './faq';
-// @import './footer';
+@import './footer';
 
 // Libs
 // @import './libs/swiper';
